--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,10 +8,18 @@ filename = [
 extend-exclude = [
     'src/first_app/ui/*',
 ]
-per-file-ignores =[
+per-file-ignores = [
     '__init__.py: F401',  # imported but unused
 ]
 
 
 [tool.pypyr]
 pipelines_subdir = ".pipelines"
+
+
+[tool.pytest.ini_options]
+minversion = "7.0"
+addopts = "-ra -q"
+testpaths = [
+    "tests",
+]
